--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "firebase": "^10.7.1",
+    "formik": "^2.4.5",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "typescript": "^5",
