--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
