--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
+    "react-loader-spinner": "^6.1.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
