--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "geolib": "^3.3.4",
     "mapbox-gl": "^3.0.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
