--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.6",
     "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^22",
     "@types/react": "^19",
