--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo 0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "firebase": "^11.7.2",
     "formik": "^2.4.6",
     "geolib": "^3.3.4",
@@ -18,8 +19,10 @@
     "react": "^19.0.0",
     "react-dom": "^19",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.56.3",
     "react-loader-spinner": "^6.1.6",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.6",
@@ -30,6 +33,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "postcss": "^8",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.6",
     "typescript": "5.8.3"
   },
