--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "echo 0"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^2.9.1",
     "@hookform/resolvers": "^5.0.1",
     "firebase": "^11.7.2",
+    "firebase-admin": "^12.7.0",
     "geolib": "^3.3.4",
     "next": "^15.3.2",
     "next-auth": "^5.0.0-beta.28",
