--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.7.2",
     "firebase-admin": "^12.7.0",
     "geolib": "^3.3.4",
+    "maplibre-gl": "^5.5.0",
     "next": "^15.3.2",
     "next-auth": "^5.0.0-beta.28",
     "react": "^19.0.0",
@@ -22,6 +23,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.56.3",
     "react-loader-spinner": "^6.1.6",
+    "react-map-gl": "^8.0.4",
     "zod": "^3.24.4"
   },
   "devDependencies": {
