--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.7.2",
     "firebase-admin": "^12.7.0",
     "geolib": "^3.3.4",
+    "immutable": "^5.1.2",
     "maplibre-gl": "^5.5.0",
     "next": "^15.3.2",
     "next-auth": "^5.0.0-beta.28",
