--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^2.9.1",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
     "firebase": "^11.7.2",
     "firebase-admin": "^12.7.0",
