--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "maplibre-gl": "^5.5.0",
     "next": "^15.3.2",
     "next-auth": "^5.0.0-beta.28",
+    "next-safe-action": "^7.10.8",
     "react": "^19.0.0",
     "react-dom": "^19",
     "react-firebase-hooks": "^5.1.1",
